--- a/client/src/states/tangos/tango.scss
+++ b/client/src/states/tangos/tango.scss
@@ -1,4 +1,19 @@
 .new-tango-template {
+  .top {
+    .sims {
+      float: left;
+    }
+
+    .commands {
+      float: right;
+      border: 1px solid lightGray;
+      padding: 10px;
+      ul {
+        padding-left: 25px;
+      }
+    }
+  }
+
   .page-header {
     input {
       font-size: 36px;
