--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -186,20 +186,22 @@ button.az-loading {
         position: relative;
         top: 2px;
         right: 2px; }
-      .statement-directive-template .statement .menu-container .menu #reactions-template .reactions span.reaction {
-        margin-left: 0;
-        padding: 9px;
-        vertical-align: middle; }
-      .statement-directive-template .statement .menu-container .menu #reactions-template .explanations {
-        margin-top: 10px;
-        border-top: 1px solid lightgray;
-        padding-top: 10px;
-        font-size: 10px;
-        height: 77px; }
-        .statement-directive-template .statement .menu-container .menu #reactions-template .explanations span.label {
-          margin-left: 5px;
-          float: none;
+      .statement-directive-template .statement .menu-container .menu #reactions-template {
+        width: 240px; }
+        .statement-directive-template .statement .menu-container .menu #reactions-template .reactions span.reaction {
+          margin-left: 0;
+          padding: 9px;
           vertical-align: middle; }
+        .statement-directive-template .statement .menu-container .menu #reactions-template .explanations {
+          margin-top: 10px;
+          border-top: 1px solid lightgray;
+          padding-top: 10px;
+          font-size: 10px;
+          height: 77px; }
+          .statement-directive-template .statement .menu-container .menu #reactions-template .explanations span.label {
+            margin-left: 5px;
+            float: none;
+            vertical-align: middle; }
 
 .statement-directive-template .level-0 {
   position: relative;
