--- a/client/src/states/tangos/statementDirective/statement.directive.scss
+++ b/client/src/states/tangos/statementDirective/statement.directive.scss
@@ -75,6 +75,8 @@
         }
 
         #reactions-template {
+          width: 240px;
+
           .reactions {
             span.reaction {
               margin-left: 0;
