Fixed reactions bug

--- a/client/src/states/tangos/statementDirective/statement.directive.scss
+++ b/client/src/states/tangos/statementDirective/statement.directive.scss
@@ -72,6 +72,10 @@
           position: relative;
           top: 2px;
           right: 2px;
+
+          &:focus {
+            outline: none;
+          }
         }
 
         #reactions-template {
