--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -186,6 +186,8 @@ button.az-loading {
         position: relative;
         top: 2px;
         right: 2px; }
+        .statement-directive-template .statement .menu-container .menu .react:focus {
+          outline: none; }
       .statement-directive-template .statement .menu-container .menu #reactions-template {
         width: 240px; }
         .statement-directive-template .statement .menu-container .menu #reactions-template .reactions span.reaction {
