--- a/client/src/states/tangos/statementDirective/statement.directive.scss
+++ b/client/src/states/tangos/statementDirective/statement.directive.scss
@@ -27,9 +27,12 @@
         border-radius: 25px;
         padding: 5px;
         position: relative;
-        top: 15px;
+        top: 9px;
         word-wrap: break-word;
         cursor: pointer;
+        text-align: center;
+        width: 77px;
+        display: inline-block;
       }
     }
 
